<resources>
    <string name="app_name">JCMusicPlayer</string>
    <string name="action_settings">Settings</string>

    <string name="str_btn_play">播放</string>
    <string name="str_btn_pase">暂停</string>
    <string name="str_btn_stop">停止</string>
    <string name="str_btn_next">下一首</string>
    <string name="str_btn_prev">上一首</string>

    <!--Bottom controller panel information-->
    <string name="unknown_music_name">未知歌曲</string>
    <string name="unknown_artist_name">未知歌手</string>

    <!-- main page left drawer setting strings-->
    <string name="left_drawer_close_timing">定时关闭</string>
    <string name="left_drawer_shake_switch">摇晃切歌</string>
    <string name="left_drawer_listen_recognize">听歌识曲</string>
    <string name="left_drawer_desk_lyric">桌面歌词</string>
    <string name="left_drawer_clear_cache">清理缓存</string>
    <string name="left_drawer_setting">设置</string>
    <string name="left_drawer_exit">退出</string>
</resources>
